[gd_scene load_steps=11 format=3 uid="uid://sj8euq504nmf"]

[ext_resource type="Texture2D" uid="uid://di5wr73ed36xs" path="res://Art/Assets/indoor/machine2.png" id="1_skvb8"]
[ext_resource type="Script" path="res://objects/resources/machines/plank_machine_interaction.gd" id="2_ymsof"]
[ext_resource type="Resource" uid="uid://78hxtu2xkf4q" path="res://data/player_1_data.tres" id="3_lmnb8"]
[ext_resource type="Texture2D" uid="uid://67m75b3d1lvf" path="res://Art/Assets/hints/wood-plank.png" id="4_vh65a"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d6i0g"]
size = Vector2(18, 5)

[sub_resource type="CircleShape2D" id="CircleShape2D_qaybn"]
radius = 20.025

[sub_resource type="LabelSettings" id="LabelSettings_wx2cj"]
font_size = 3
outline_size = 2
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_fysu7"]
font_size = 3
outline_size = 1
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_ej1i1"]
font_size = 4
outline_size = 1
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_g5xnj"]
font_size = 3
outline_size = 1
outline_color = Color(0, 0, 0, 1)

[node name="maszyna" type="StaticBody2D"]
position = Vector2(45, 41)
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.6, 0.6)
texture = ExtResource("1_skvb8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_d6i0g")

[node name="MachineInteractableArea" type="Area2D" parent="."]
script = ExtResource("2_ymsof")
player_data = ExtResource("3_lmnb8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="MachineInteractableArea"]
shape = SubResource("CircleShape2D_qaybn")

[node name="Label" type="Label" parent="MachineInteractableArea"]
offset_left = -10.0
offset_top = -22.0
offset_right = 17.0
offset_bottom = -15.0
text = "[E] to interact"
label_settings = SubResource("LabelSettings_wx2cj")

[node name="Label2" type="Label" parent="MachineInteractableArea"]
offset_left = -13.0
offset_top = -19.0
offset_right = 14.0
offset_bottom = -7.0
text = "[F] to upgrade"
label_settings = SubResource("LabelSettings_fysu7")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="crafting_time" type="Timer" parent="MachineInteractableArea"]
wait_time = 3.0
one_shot = true

[node name="crafting_label" type="Label" parent="MachineInteractableArea"]
offset_left = -15.0
offset_top = -33.0
offset_right = 16.0
offset_bottom = -21.0
text = "crafting..."
label_settings = SubResource("LabelSettings_ej1i1")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="upgrade_label" type="Label" parent="MachineInteractableArea"]
offset_left = -15.0
offset_top = 2.0
offset_right = 16.0
offset_bottom = 25.0
text = "Yay! Upgraded!"
label_settings = SubResource("LabelSettings_g5xnj")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="hint" type="Sprite2D" parent="."]
position = Vector2(1, 28)
texture = ExtResource("4_vh65a")

[connection signal="area_entered" from="MachineInteractableArea" to="MachineInteractableArea" method="_on_area_entered"]
[connection signal="area_exited" from="MachineInteractableArea" to="MachineInteractableArea" method="_on_area_exited"]
[connection signal="timeout" from="MachineInteractableArea/crafting_time" to="MachineInteractableArea" method="_on_crafting_time_timeout"]
